# Bearpi-Nano

./: README.md  bundle.json
applications/BearPi/BearPi-HM_Nano/sample/: BUILD.gn  README.md
applications/BearPi/BearPi-HM_Nano/sample/A1_kernal_thread/: BUILD.gn  README.md  thread_example.c
applications/BearPi/BearPi-HM_Nano/sample/A2_kernel_timer/: BUILD.gn  README.md
applications/BearPi/BearPi-HM_Nano/sample/A3_kernel_event/: BUILD.gn  Event_example.c  README.md
applications/BearPi/BearPi-HM_Nano/sample/A4_kernel_mutex/: BUILD.gn  Mutex_example.c  README.md
applications/BearPi/BearPi-HM_Nano/sample/A5_kernel_semaphore/: BUILD.gn  README.md  Semaphore_example.c
applications/BearPi/BearPi-HM_Nano/sample/A6_kernel_message/: BUILD.gn  Message_example.c  README.md
applications/BearPi/BearPi-HM_Nano/sample/B1_basic_led_blink/: BUILD.gn  README.md  led_example.c
applications/BearPi/BearPi-HM_Nano/sample/B2_basic_button/: button_example.c
applications/BearPi/BearPi-HM_Nano/sample/B3_basic_pwm_led/: README.md  pwm_example.c
applications/BearPi/BearPi-HM_Nano/sample/B4_basic_adc/: BUILD.gn  README.md  adc_example.c
applications/BearPi/BearPi-HM_Nano/sample/B5_basic_i2c_nfc/: BUILD.gn  i2c_example.c
applications/BearPi/BearPi-HM_Nano/sample/B6_basic_uart/: BUILD.gn  README.md  uart_example.c
applications/BearPi/BearPi-HM_Nano/sample/C1_e53_sf1_mq2/: BUILD.gn  README.md  e53_sf1_example.c
applications/BearPi/BearPi-HM_Nano/sample/C1_e53_sf1_mq2/src/: E53_SF1.c
applications/BearPi/BearPi-HM_Nano/sample/C2_e53_ia1_temp_humi_pls/: BUILD.gn  e53_ia1_example.c
applications/BearPi/BearPi-HM_Nano/sample/C2_e53_ia1_temp_humi_pls/include/: E53_IA1.h
applications/BearPi/BearPi-HM_Nano/sample/C3_e53_sc1_pls/: BUILD.gn  README.md  e53_sc1_example.c
applications/BearPi/BearPi-HM_Nano/sample/C3_e53_sc1_pls/include/: E53_SC1.h
applications/BearPi/BearPi-HM_Nano/sample/C4_e53_sc2_axis/: BUILD.gn  README.md  e53_sc2_example.c
applications/BearPi/BearPi-HM_Nano/sample/C5_e53_is1_infrared/: BUILD.gn  README.md  e53_is1_example.c
applications/BearPi/BearPi-HM_Nano/sample/C6_e53_flower_ia1/: BUILD.gn  e53_flower_ia1_example.c
applications/BearPi/BearPi-HM_Nano/sample/C6_e53_flower_ia1/include/: flower.h
applications/BearPi/BearPi-HM_Nano/sample/C6_e53_flower_ia1/src/: flower.c
applications/BearPi/BearPi-HM_Nano/sample/D10_iot_cloud_oc_manhole_cover/: BUILD.gn  README.md  iot_cloud_oc_sample.c
applications/BearPi/BearPi-HM_Nano/sample/D10_iot_cloud_oc_manhole_cover/include/: E53_SC2.h
applications/BearPi/BearPi-HM_Nano/sample/D10_iot_cloud_oc_manhole_cover/src/: E53_SC2.c
applications/BearPi/BearPi-HM_Nano/sample/D11_iot_cloud_oc_infrared/: BUILD.gn  README.md  iot_cloud_oc_sample.c
applications/BearPi/BearPi-HM_Nano/sample/D11_iot_cloud_oc_infrared/include/: E53_IS1.h
applications/BearPi/BearPi-HM_Nano/sample/D11_iot_cloud_oc_infrared/src/: E53_IS1.c
applications/BearPi/BearPi-HM_Nano/sample/D12_iot_cloud_oc_agriculture/: README.md  iot_cloud_oc_sample.c
applications/BearPi/BearPi-HM_Nano/sample/D13_iot_cloud_oc_gps/: BUILD.gn  README.md  iot_cloud_oc_sample.c
applications/BearPi/BearPi-HM_Nano/sample/D13_iot_cloud_oc_gps/include/: E53_ST1.h
applications/BearPi/BearPi-HM_Nano/sample/D13_iot_cloud_oc_gps/src/: E53_ST1.c
applications/BearPi/BearPi-HM_Nano/sample/D1_iot_wifi_ap/: BUILD.gn  README.md  wifi_ap.c
applications/BearPi/BearPi-HM_Nano/sample/D1_iot_wifi_sta/: BUILD.gn  README.md  wifi_sta.c
applications/BearPi/BearPi-HM_Nano/sample/D2_iot_wifi_sta_connect/: BUILD.gn  README.md  wifi_sta_connect.c
applications/BearPi/BearPi-HM_Nano/sample/D3_iot_udp_client/: BUILD.gn  README.md  udp_client_demo.c
applications/BearPi/BearPi-HM_Nano/sample/D3_iot_udp_client/src/: wifi_connect.c
applications/BearPi/BearPi-HM_Nano/sample/D4_iot_tcp_server/: BUILD.gn  README.md  tcp_server_demo.c
applications/BearPi/BearPi-HM_Nano/sample/D4_iot_tcp_server/src/: wifi_connect.c
applications/BearPi/BearPi-HM_Nano/sample/D5_iot_mqtt/: BUILD.gn  README.md  iot_mqtt.c
applications/BearPi/BearPi-HM_Nano/sample/D5_iot_mqtt/src/: wifi_connect.c
applications/BearPi/BearPi-HM_Nano/sample/D6_iot_cloud_oc/: BUILD.gn  README.md  iot_cloud_oc_sample.c
applications/BearPi/BearPi-HM_Nano/sample/D6_iot_cloud_oc/include/: oc_mqtt.h
applications/BearPi/BearPi-HM_Nano/sample/D6_iot_cloud_oc/src/: wifi_connect.c
applications/BearPi/BearPi-HM_Nano/sample/D7_iot_cloud_onenet/: BUILD.gn  README.md  iot_cloud_onenet_sample.c
applications/BearPi/BearPi-HM_Nano/sample/D7_iot_cloud_onenet/include/: onenet.h
applications/BearPi/BearPi-HM_Nano/sample/D7_iot_cloud_onenet/src/: E53_IA1.c  onenet_mqtt.c  wifi_connect.c
applications/BearPi/BearPi-HM_Nano/sample/D8_iot_cloud_oc_smoke/: BUILD.gn  README.md  iot_cloud_oc_sample.c
applications/BearPi/BearPi-HM_Nano/sample/D8_iot_cloud_oc_smoke/include/: E53_SF1.h
applications/BearPi/BearPi-HM_Nano/sample/D9_iot_cloud_oc_light/: BUILD.gn  README.md  iot_cloud_oc_sample.c
applications/BearPi/BearPi-HM_Nano/sample/Dht11/: README.md  dht11_run.c
applications/BearPi/BearPi-HM_Nano/sample/Hx711/: BUILD.gn  hx711_run.c
applications/BearPi/BearPi-HM_Nano/sample/Mq2/: BUILD.gn  README.md  mq2_run.c
applications/BearPi/BearPi-HM_Nano/sample/Mq7/: BUILD.gn  README.md  mq7_run.c
applications/BearPi/BearPi-HM_Nano/sample/RFID/: BUILD.gn  README.md
applications/BearPi/BearPi-HM_Nano/sample/Z1_hi3861_uart_ylc/: BUILD.gn  README.md  uart_hi3861.c
applications/BearPi/BearPi-HM_Nano/sample/Z2_hi3861_flash_ylc/: BUILD.gn  README.md  flash_example.c
applications/BearPi/BearPi-HM_Nano/sample/Zx_Developer/: BUILD.gn  README.md
base/startup/services/appspawn_lite/: BUILD.gn
base/startup/services/appspawn_lite/include/: appspawn_message.h
base/startup/services/appspawn_lite/src/: appspawn_adapter.c  appspawn_message.c  appspawn_process.c  appspawn_service.c
foundation/aafwk/frameworks/ability_lite/: BUILD.gn
foundation/aafwk/frameworks/ability_lite/src/: ability.cpp  ability_scheduler.cpp  ability_thread.cpp
(+330 files in other folders)
