# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config("verify_base_config") {
  include_dirs = [
    "//base/security/frameworks/app_verify/include",
    "//base/startup/interfaces/kits/syspara_lite",
    "//base/security/frameworks/app_verify/products/ipcamera",
  ]
  cflags = [
    "-Wall",
  ]
}

shared_library("verify_base") {
  sources = [
      "app_verify_base.c",
      "../default/app_verify_default.c",
  ]
  configs += [ ":verify_base_config" ]
  public_deps = [
      "//base/startup/frameworks/syspara_lite/parameter:parameter",
      "//base/hiviewdfx/frameworks/hilog_lite/featured:hilog_shared",
  ]
}
